fix checkbox alignment in IE
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtLoginApp/trunk@12615 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/WebApp/resources/css/style.css
+++ b/src/main/WebApp/resources/css/style.css
@@ -416,6 +416,12 @@ h4.birthday{
 	vertical-align: middle;
 }
 
+.ie :not(#foo) input[type=radio] + label,
+.ie :not(#foo) input[type=checkbox] + label{
+	/*in IE labels are 2px off*/
+	margin-top: 2px;
+}
+
 :not(#foo) input[type=radio],
 :not(#foo) input[type=checkbox] {
 	vertical-align: middle;
